@@ -60,15 +60,10 @@ query_axfr(struct nsd *nsd, struct query *query)
 			return QUERY_PROCESSED;
 		}
 
-#ifdef USE_RADIX_TREE
 		if(radix_first(nsd->db->domains->nametree)->elem)
 			query->axfr_current_domain = (domain_type*)radix_first(
 			nsd->db->domains->nametree)->elem;
 		else	query->axfr_current_domain = NULL;
-#else
-		query->axfr_current_domain
-			= (domain_type *) rbtree_first(nsd->db->domains->names_to_domains);
-#endif
 		query->axfr_current_rrset = NULL;
 		query->axfr_current_rr = 0;
 		if(query->tsig.status == TSIG_OK) {
@@ -100,11 +95,7 @@ query_axfr(struct nsd *nsd, struct query *query)
 	/* Add zone RRs until answer is full.  */
 	assert(query->axfr_current_domain);
 
-#ifdef USE_RADIX_TREE
 	while (query->axfr_current_domain != NULL)
-#else
-	while ((rbnode_t *) query->axfr_current_domain != RBTREE_NULL)
-#endif
 	{
 		if (!query->axfr_current_rrset) {
 			query->axfr_current_rrset = domain_find_any_rrset(
@@ -133,11 +124,7 @@ query_axfr(struct nsd *nsd, struct query *query)
 		}
 		assert(query->axfr_current_domain);
 		query->axfr_current_domain
-#ifdef USE_RADIX_TREE
 			= domain_next(query->axfr_current_domain);
-#else
-			= (domain_type *) rbtree_next((rbnode_t *) query->axfr_current_domain);
-#endif
 	}
 
 	/* Add terminating SOA RR.  */
