@@ -1325,13 +1325,9 @@ static void
 check_dname(namedb_type* db)
 {
 	domain_type* domain;
-#ifdef USE_RADIX_TREE
 	for(domain = radix_first(db->domains->nametree)?
 		(domain_type*)radix_first(db->domains->nametree)->elem:NULL;
 		domain; domain = domain_next(domain))
-#else
-	RBTREE_FOR(domain, domain_type*, db->domains->names_to_domains)
-#endif
 	{
 		if(domain->is_existing) {
 			/* there may not be DNAMEs above it */
